--- a/index.html
+++ b/index.html
@@ -114,8 +114,115 @@
       </section>
       <section class="part" id="skills">
         <h2>SKILLS</h2>
-        <div class="skill">
-          <h3>Programming Languages</h3>
+        <div class="grid">
+          <div class="skill">
+            <h3>Programming Languages</h3>
+            <div class="float-Wrap">
+              <p class="section-left">HTML5/CSS</p>
+              <p class="section-right">
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </p>
+            </div>
+            <div class="float-Wrap">
+              <p class="section-left">JavaScript</p>
+              <p class="section-right">
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </p>
+            </div>
+            <div class="float-Wrap">
+              <p class="section-left">PHP</p>
+              <p class="section-right">
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </p>
+            </div>
+            <div class="float-Wrap">
+              <p class="section-left">Python</p>
+              <p class="section-right">
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </p>
+            </div>
+          </div>
+          <div class="skill">
+            <h3>Databases</h3>
+            <div class="float-Wrap">
+              <p class="section-left">SQL</p>
+              <p class="section-right">
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </p>
+            </div>
+            <div class="float-Wrap">
+              <p class="section-left">MonggoDB</p>
+              <p class="section-right">
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </p>
+            </div>
+          </div>
+          <div class="skill">
+            <h3>Graphics</h3>
+            <div class="float-Wrap">
+              <p class="section-left">Adobe Photoshop</p>
+              <p class="section-right">
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </p>
+            </div>
+            <div class="float-Wrap">
+              <p class="section-left">Adobe Illustration</p>
+              <p class="section-right">
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </p>
+            </div>
+          </div>
+          <div class="skill">
+            <h3>Additional Skills</h3>
+            <div class="float-Wrap">
+              <p class="section-left">Git</p>
+              <p class="section-right">
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </p>
+            </div>
+            <div class="float-Wrap">
+              <p class="section-left">ReactJS</p>
+              <p class="section-right">
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </p>
+            </div>
+            <div class="float-Wrap">
+              <p class="section-left">Firebase</p>
+              <p class="section-right">
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </p>
+            </div>
+            <div class="float-Wrap">
+              <p class="section-left">XML</p>
+              <p class="section-right">
+                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-regular fa-star"></i>
+              </p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
