skills edit, list style edit

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="logo"><img id="logo" src="./images/logo.png" alt="SL" /></div>
       <div class="namePosition">
         <h1>SIRLIN JEONG</h1>
-        <p class="position">WEB DEVELOPER</p>
+        <p class="position">A FRONT-END DEVELOPER</p>
       </div>
     </header>
     <main>
@@ -32,7 +32,7 @@
               </h3>
               <p class="section-right">Sep.2019 - Apr.2021</p>
             </div>
-            <p class="college">Fanshawe College, London, Canada</p>
+            <address class="college">Fanshawe College, London, Canada</address>
             <p class="gpa">GPA: 4.04/4.20</p>
           </div>
           <div class="edu">
@@ -42,9 +42,9 @@
               </h3>
               <p class="section-right">Mar.2010 - Feb.2015</p>
             </div>
-            <p class="college">
+            <address class="college">
               Gongju National University, Gongju, Republic of Korea
-            </p>
+            </address>
           </div>
         </section>
       </div>
@@ -95,7 +95,7 @@
           <address>
             National Research Institute of Cultural Heritage | Deajeon, Korea
           </address>
-          <ul>
+          <ul class="tasks">
             <li>
               Collected, measured, and analyzed raw data for classification by
               characteristics of materials.
@@ -116,13 +116,16 @@
         <h2>SKILLS</h2>
         <div class="grid">
           <div class="skill">
-            <h3>Programming Languages</h3>
-            <div class="float-Wrap">
+            <div class="card-title">
+              <h3>Programming<br />Languages</h3>
+            </div>
+
+            <div class="float-Wrap card">
               <p class="section-left">HTML5/CSS</p>
               <p class="section-right">
                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
                 ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
-                ><i class="fa-regular fa-star"></i>
+                ><i class="fa-solid fa-star"></i>
               </p>
             </div>
             <div class="float-Wrap">
@@ -130,14 +133,15 @@
               <p class="section-right">
                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
                 ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
-                ><i class="fa-regular fa-star"></i>
+                ><i class="fa-solid fa-star"></i>
               </p>
             </div>
             <div class="float-Wrap">
               <p class="section-left">PHP</p>
               <p class="section-right">
                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
-                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i
+                ><i class="fa-regular fa-star"></i
                 ><i class="fa-regular fa-star"></i>
               </p>
             </div>
@@ -151,7 +155,8 @@
             </div>
           </div>
           <div class="skill">
-            <h3>Databases</h3>
+            <div class="card-title"><h3>Databases</h3></div>
+
             <div class="float-Wrap">
               <p class="section-left">SQL</p>
               <p class="section-right">
@@ -170,9 +175,10 @@
             </div>
           </div>
           <div class="skill">
-            <h3>Graphics</h3>
+            <div class="card-title"><h3>Graphics</h3></div>
+
             <div class="float-Wrap">
-              <p class="section-left">Adobe Photoshop</p>
+              <p class="section-left">Photoshop</p>
               <p class="section-right">
                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
                 ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
@@ -180,22 +186,23 @@
               </p>
             </div>
             <div class="float-Wrap">
-              <p class="section-left">Adobe Illustration</p>
+              <p class="section-left">Illustration</p>
               <p class="section-right">
                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
-                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i
+                ><i class="fa-regular fa-star"></i
                 ><i class="fa-regular fa-star"></i>
               </p>
             </div>
           </div>
           <div class="skill">
-            <h3>Additional Skills</h3>
+            <div class="card-title"><h3>Additional Skills</h3></div>
             <div class="float-Wrap">
               <p class="section-left">Git</p>
               <p class="section-right">
                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
                 ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
-                ><i class="fa-regular fa-star"></i>
+                ><i class="fa-solid fa-star"></i>
               </p>
             </div>
             <div class="float-Wrap">
@@ -210,7 +217,8 @@
               <p class="section-left">Firebase</p>
               <p class="section-right">
                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
-                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i
+                ><i class="fa-regular fa-star"></i
                 ><i class="fa-regular fa-star"></i>
               </p>
             </div>
@@ -218,7 +226,8 @@
               <p class="section-left">XML</p>
               <p class="section-right">
                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
-                ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
+                ><i class="fa-solid fa-star"></i
+                ><i class="fa-regular fa-star"></i
                 ><i class="fa-regular fa-star"></i>
               </p>
             </div>
